<resources>
    <string name="app_name">Washington Post</string>
    <string name="app_name_full">The Washington Post Classic (Android)</string>
    <string name="accountLabel">Washington Post Subscription Account.</string>
    <string name="generalSettings">General Settings</string>
    <string name="accountSettings">Account Settings</string>
    <string name="accountSettingsSummary">Modify Login &amp; Password</string>
    <string name="loginLabel">Login</string>
    <string name="passwordLabel">Password</string>
    <string name="hourly">HOURLY FORECAST</string>
    <string name="five_day">5-DAY FORECAST</string>
    <string name="menu_loading">Loading…</string>
    <string name="menu_loading_failed">Loading Failed</string>
    <string name="feature_is_unavailable_msg">This feature is not available right now. Please try again later.</string>
    <string name="feature_is_unavailable_no_connection_msg">This feature is not available without a connection. Please try again later.</string>
    <string name="s_ink">Ink</string>
    <string name="s_rect">Rect</string>
    <string name="s_remove">Remove</string>
    <string name="s_save">Save</string>
    <string name="s_end">End</string>
    <string name="s_prev">&lt;</string>
    <string name="s_next">></string>
    <string name="s_find">the</string>
    <string name="s_act">Do</string>
    <string name="s_saveas">Save as</string>
    <string name="s_edit">Edit</string>
    <string name="downloading">Downloading…</string>
    <string name="error">Error</string>
    <string name="retry">Try Again</string>
    <string name="delete_archive_msg_template">Delete selected edition?</string>
    <string name="reload">Reload</string>
    <string name="download_canceled_msg">Download has been canceled.</string>
    <string name="archive_has_been_deleted_msg">This archive has been deleted.</string>
    <string name="save_gallery_images">Save gallery images</string>
    <string name="toggle_thumbnails">Toggle thumbnails</string>
    <string name="toggle_slideshow">Start/pause a slideshow</string>
    <string name="new_printed_edition_download_request">A new issue is available. Do you want to
        download it?</string>
    <string name="update_is_available_title">New issue available</string>
    <string name="archive_download_notification_title_template">WP %1$s Section for %2$s</string>
    <string name="archive_download_notification_descriptor">A Washington Post section for the date.</string>
    <string name="download">Download</string>
    <string name="dismiss">Dismiss</string>
    <string name="refresh_page">Refresh page</string>
    <string name="search_hint">Search or ask a question</string>
    <string name="voice_search">Voice search</string>
    <string name="recipe_search_hint">What\'s cooking today?</string>
    <string name="election_search_hint">Search candidates, races, and places</string>
    <string name="phone_search_hint">Search</string>
    <string name="manage_print_edition_title">Manage Print Edition Download</string>
    <string name="manage_print_edition_message">Do you want Newsstand to deliver the print edition
        to your app every
        night (takes more storage space)?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="clear_data_confirmation">Do you want to delete all cached data?</string>
    <string name="wp_button_desc">Return to the main window</string>
    <string name="larger_font_button">Make font larger</string>
    <string name="smaller_font_button">Make font smaller</string>
    <string name="menu_settings_font_size">Font Size</string>
    <string name="menu_settings_print_edition_download">Print Edition Download</string>
    <string name="build_version">${wapo.build.version}</string>
    <string name="textview_description_clear">Clear the text box</string>
    <string name="close">Close</string>
    <string name="cancel_download">Cancel Download</string>
    <string name="download_archive_template">Downloading %s edition.</string>
    <string name="archive_downloading_error_msg_template">There was an error downloading %s edition.
        Would you like to try
        again?</string>
    <string name="archive_downloading_canceled_msg_template">Downloading for %s has been canceled.
        Would you like to
        reload it?</string>
    <string name="archive_deleted_msg_template">%s edition has been deleted. Would you like to reload
        it?</string>
    <string name="archive_downloading_error_no_connection">Please check your internet connection</string>
    <string name="archive_open_button">Open</string>
    <string name="archive_download_button">Download</string>
    <string name="archive_remove_button">Remove</string>
    <string name="archive_cancel_button">Cancel</string>
    <string name="archive_prompt_title">Enable automatic downloads?</string>
    <string name="archive_prompt_subtitle">Get the day\'s paper delivered to your device\nevery morning, automatically. (4:30 AM EST)\nAutomatic downloads are Wifi only by default.</string>
    <string name="archive_prompt_confirm">Yes</string>
    <string name="archive_prompt_cancel">No, thanks</string>
    <string name="archive_push_prompt_title">Sign up for notifications?</string>
    <string name="archive_push_prompt_subtitle">Get a notification previewing the top stories in each day\'s paper.</string>
    <string name="archive_push_prompt_subtitle_tablet">Get a notification previewing the\ntop stories in each day\'s paper.</string>
    <string name="archive_not_found">No Edition Found</string>
    <string name="the_washington_post">The Washington Post</string>
    <string name="today_paper">Today\'s Paper</string>
    <string name="editionsFrontPageDescription">The front page for the selected date.</string>
    <string name="error_opening_content">Unable to load content</string>
    <string name="splash_screen">The washington post is loading</string>
    <string name="main_page">Main page</string>
    <string name="article_page">Article page</string>
    <string name="search_page">Search results</string>
    <string name="main_menu">Main menu</string>
    <string name="comics_page">Comics page</string>
    <string name="transportation_page">Transportation page</string>
    <string name="back_to_main">Go back</string>
    <string name="favorite_checkbox">Favorite</string>
    <string name="add_favorite">Tap checkbox to add to favorites</string>
    <string name="remove_favorite">Tap checkbox to remove from favorites</string>
    <string name="was_added_to_favorite">Added to favorite</string>
    <string name="has_popup">Has popup menu</string>
    <string name="page_next">Next article</string>
    <string name="page_prev">Previous article</string>
    <string name="marked_as_favorite_true">Marked as favorite</string>
    <string name="marked_as_favorite_false">Not marked as favorite</string>
    <string name="search_current_location">Search by current location</string>
    <string name="save_current_location_desc">Save current location</string>
    <string name="save_location">Save location</string>
    <string name="location_info_is_not_available_yet_msg">A location information yet is not available. Please try again
        later.</string>
    <string name="favorite_help_message">To add a story to Favorites, tap the star icon.</string>
    <string name="comics_overlay_hint">Swipe up or down to see a different comic.</string>
    <string name="post_classic_overlay_hint">Tap an article to read the full story.\nSwipe left or right to view more pages.</string>
    <string name="article_overlay_hint">Scroll for more</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="open_archive_error">Error opening issue</string>
    <string name="archives_button">Archive</string>
    <string name="home">Home</string>
    <string name="section_menu">Section menu</string>
    <string name="pw_signin_desc1">pw_signin_desc1</string>
    <string name="pw_forgot_password">Forgot your password?</string>
    <string name="pw_welcome_desc">pw_welcome_desc</string>
    <string name="pw_sigin">pw_sigin</string>
    <string name="pw_signin_here">pw_signin_here</string>
    <string name="pw_print_verification">pw_print_verification</string>
    <string name="pw_get_free_access">pw_get_free_access</string>
    <string name="pw_signin_desc2">pw_signin_desc2</string>
    <string name="pw_confirm_desc1">Enjoy the app</string>
    <string name="pw_register_desc1">Create a new Washpost sign-in</string>
    <string name="pw_option_signin">Use my existing Washington Post sign-in</string>
    <string name="pw_option_register">Create a new Washington Post sign-in</string>
    <string name="pw_server_error">Our servers are not responding, or some other error has occurred. Please try again later. You can sign in through the settings menu by clicking on "Washington post: Sign in"</string>
    <string name="pw_digital_verification_success">Enjoy The Washington Post app for Android and your unlimited digital access to The Washington Post!</string>
    <string name="pw_digital_verification_failure">Our records show that either you don\'t have a current subscription , or your current subscription is Digital (Website Only). For full access to all our apps, you will need to upgrade your subscription to Digital Premium.</string>
    <string name="pw_digital_web_only_verification">Our records show that your current subscription is Digital (Website Only). For full access to all our apps, you will need to upgrade your subscription to Digital Premium.</string>
    <string name="print_edition">Print Edition</string>
    <string name="top_stories">Home</string>
    <string name="listen_tab">Listen</string>
    <string name="games_tab">Games</string>
    <string name="find">Find</string>
    <string name="article_action_share">Share story</string>
    <string name="article_action_summary">Article Summary</string>
    <string name="article_action_comment">Comment</string>
    <string name="sign_in_as_someone_else">Sign in as someone else</string>
    <string name="get_started">Continue</string>
    <string name="washington_post_logo">Washington Post Logo</string>
    <string name="welcome">Welcome!</string>
    <string name="discover_top_stories"><b>Read top stories</b> and use the Discover tab to enjoy the same visual storytelling you’re used to.</string>
    <string name="customize_alerts"><b>Customize your alerts</b> and stay up to date on the latest news.</string>
    <string name="check_saved_stories"><b>Check out My Post</b> for saved stories and personalized recommendations.</string>
    <string name="saved_stories">Saved Stories</string>
    <string name="alerts_icon">Alerts Icon</string>
    <string name="sparkle_icon">Sparkle Icon</string>
    <string name="welcome_redesigned">Welcome to the redesigned app</string>
    <string name="unification_onboarding_amazon_subtitle">We\'ve made some updates to bring you an improved app experience, including new features. <u>Learn more.</u></string>
    <string name="article_action_ellipse" translatable="false">Ellipse Menu</string>
    <string name="allow_map_on_every_article">Allow MAP wall on every article. Overrides all snooze logic.</string>
    <string name="override_map_snooze_time_to_30_seconds">Override MAP snooze time to 30 seconds</string>
    <string name="reset_map_snooze_count">Reset MAP snooze count</string>
    <string name="manage_subscription_summary">If you cancel, your unlimited access will end on %s.</string>
    <string name="cancel_ad_free_title">Cancel Ad-Free</string>
    <string name="cancel_ad_free_summary">Switch back to a plan with ads.</string>
    <string name="manage_or_cancel_subscription_title">Manage or Cancel Subscription</string>
</resources>