<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="40dp"
    android:paddingEnd="40dp"
    android:layout_margin="5dp">
    <CheckBox
        android:id="@+id/allow_map_on_every_article"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/allow_map_on_every_article"/>
    <CheckBox
        android:id="@+id/map_30_second_snooze_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/override_map_snooze_time_to_30_seconds"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Snooze count: " />

        <TextView
            android:id="@+id/snooze_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/map_reset_snooze_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColor="@color/black"
        android:text="@string/reset_map_snooze_count"/>

</LinearLayout>
